--- a/pkg/api/v1/gqlgen.yml
+++ b/pkg/api/v1/gqlgen.yml
@@ -43,6 +43,10 @@ autobind:
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
+  Pool:
+    fields:
+      settings:
+        resolver: true
   User:
     fields:
       pools:
