Update Sheets adapter and deployment configuration
Refactored Sheets adapter to handle data retrieval more robustly, replacing Sheets API-specific data structures with generic types and improving error handling for type conversions and invalid data.

--- a/deployment/server.yml
+++ b/deployment/server.yml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: ghcr.io/poolhealth/poolhealthserver:v0.4.1
+          image: ghcr.io/poolhealth/poolhealthserver:v0.4.2
           imagePullPolicy: Always
           livenessProbe:
             httpGet:
@@ -74,6 +74,8 @@ spec:
               value: "keydb-headless:6379"
             - name: INFLUXDB_ADDRESS
               value: http://influxdb-influxdb2
+            - name: SHEETS_CREDENTIALS_PATH
+              value: "/.google/"
             - name: INFLUXDB_TOKEN
               valueFrom:
                 secretKeyRef:
