--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,5 @@
+# Config file for golangci-lint.
+version: 2
 # Options for analysis running.
 run:
   # Default concurrency is a available CPU number.
@@ -14,7 +16,7 @@ output:
   # Output styling.
   # e.g. colored-line-number, line-number, json, tab, checkstyle, code-climate.
   # Default is colored-line-number.
-  formats: colored-line-number
+  format: colored-line-number
   # Print lines of code with issue, default is true.
   print-issued-lines: true
   # Print linter name in the end of issue text, default is true.
@@ -81,7 +83,6 @@ linters:
     # Go linter to check the errors handling expressions.
     - err113
     # Check import statements are formatted according to the 'goimport' command. Reformat imports in autofix mode.
-    - goimports
     # An analyzer to detect magic numbers.
     - mnd
     # Checks that printf-like functions are named with f at the end.
@@ -89,7 +90,6 @@ linters:
     # Inspects source code for security problems.
     - gosec
     # Linter for Go source code that specializes in simplifying code.
-    - gosimple
     # Vet examines Go source code and reports suspicious constructs, such as Printf calls whose arguments do not align with the format string.
     - govet
     # An analyzer to analyze expression groups.
@@ -145,11 +145,9 @@ linters:
     # It's a set of rules from staticcheck. It's not the same thing as the staticcheck binary. The author of staticcheck doesn't support or approve the use of staticcheck as a library inside golangci-lint.
     - staticcheck
     # Stylecheck is a replacement for golint.
-    - stylecheck
     # The tenv is analyzer that detects using os.Setenv instead of t.Setenv since Go1.17
     - usetesting
     # Like the front-end of a Go compiler, parses and type-checks Go code.
-    - typecheck
     # The thelper detects Go test helpers without t.Helper() call and checks the consistency of test helpers.
     - thelper
     # Remove unnecessary type conversions.
